[gd_scene load_steps=4 format=3 uid="uid://b4j0k8wkqe4bn"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_0hdqr"]
[ext_resource type="Script" path="res://domain/systems/grid_system.gd" id="2_3mjxc"]
[ext_resource type="Script" path="res://domain/systems/lane_system.gd" id="3_p8nrf"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0hdqr")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.04, 0.04, 0.04, 1)

[node name="GameLayer" type="Node2D" parent="."]

[node name="GridSystem" type="Node2D" parent="GameLayer"]
script = ExtResource("2_3mjxc")

[node name="LaneSystem" type="Node2D" parent="GameLayer"]
script = ExtResource("3_p8nrf")

[node name="ModuleContainer" type="Node2D" parent="GameLayer"]

[node name="EnemyContainer" type="Node2D" parent="GameLayer"]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CPUDisplay" type="Control" parent="UILayer/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -20.0

[node name="CPULabel" type="Label" parent="UILayer/HUD/CPUDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "CPU: 150"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveInfo" type="Control" parent="UILayer/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_right = -20.0
offset_bottom = 60.0

[node name="WaveLabel" type="Label" parent="UILayer/HUD/WaveInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "Wave: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StateInfo" type="Control" parent="UILayer/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0

[node name="StateLabel" type="Label" parent="UILayer/HUD/StateInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "WAVE PREP"
horizontal_alignment = 1
vertical_alignment = 1